--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -170,7 +170,11 @@
     "topK": "topK",
     "topKPrompt": "A topK of 1 means the selected token is the most probable among all the tokens in the model's vocabulary (also called greedy decoding)",
     "topP": "topP",
-    "topPPrompt": "Tokens are selected from the most to least probable until the sum of their probabilities equals the topP value."
+    "topPPrompt": "Tokens are selected from the most to least probable until the sum of their probabilities equals the topP value.",
+    "gpt-4o": "gpt-4o",
+    "gpt-4o-mini": "gpt-4o-mini",
+    "o1": "o1",
+    "o1-mini": "o1-mini"
   },
   "claudeAi": {
     "name": "Claude"
@@ -235,6 +239,8 @@
     "gpt-4-turbo": "gpt-4-turbo",
     "gpt-4o": "gpt-4o",
     "gpt-4o-mini": "gpt-4o-mini",
+    "o1": "o1",
+    "o1-mini": "o1-mini",
     "temperature": "Temperature",
     "temperaturePrompt": "The higher the temperature, the more creative the text, but the more likely it is to be incoherent",
     "temperature0": "More deterministic",
