--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -170,7 +170,11 @@
     "topK": "topK",
     "topKPrompt": "topK가 1이라는 것은 선택된 토큰이 모델의 어휘 중에서 가장 가능성이 높은 것을 의미합니다 (탐욕스러운 디코딩이라고도 함).",
     "topP": "topP",
-    "topPPrompt": "토큰은 가장 가능성이 높은 것부터 가장 낮은 것까지 선택되며, 그 확률의 합이 topP 값과 같아질 때까지 선택됩니다"
+    "topPPrompt": "토큰은 가장 가능성이 높은 것부터 가장 낮은 것까지 선택되며, 그 확률의 합이 topP 값과 같아질 때까지 선택됩니다",
+    "gpt-4o": "gpt-4o",
+    "gpt-4o-mini": "gpt-4o-mini",
+    "o1": "o1",
+    "o1-mini": "o1-mini"
   },
   "claudeAi": {
     "name": "Claude"
@@ -235,6 +239,8 @@
     "gpt-4-turbo": "gpt-4-turbo",
     "gpt-4o": "gpt-4o",
     "gpt-4o-mini": "gpt-4o-mini",
+    "o1": "o1",
+    "o1-mini": "o1-mini",
     "temperature": "온도",
     "temperaturePrompt": "온도가 높을수록 텍스트는 창의적이지만 일관성이 없을 가능성이 높습니다",
     "temperature0": "더 결정론적인",
