--- a/src/i18n/locales/vi.json
+++ b/src/i18n/locales/vi.json
@@ -163,7 +163,11 @@
     "topK": "topK",
     "topKPrompt": "Một topK của 1 có nghĩa là token được chọn là có khả năng cao nhất trong tất cả các token trong từ vựng của mô hình (còn được gọi là giải mã tham lam)",
     "topP": "topP",
-    "topPPrompt": "Các token được chọn từ có khả năng cao nhất đến thấp nhất cho đến khi tổng xác suất của chúng bằng với giá trị topP"
+    "topPPrompt": "Các token được chọn từ có khả năng cao nhất đến thấp nhất cho đến khi tổng xác suất của chúng bằng với giá trị topP",
+    "gpt-4o": "gpt-4o",
+    "gpt-4o-mini": "gpt-4o-mini",
+    "o1": "o1",
+    "o1-mini": "o1-mini"
   },
   "claudeAi": {
     "name": "Claude"
@@ -216,6 +220,8 @@
     "gpt-4-turbo": "gpt-4-turbo",
     "gpt-4o": "gpt-4o",
     "gpt-4o-mini": "gpt-4o-mini",
+    "o1": "o1",
+    "o1-mini": "o1-mini",
     "temperature": "Temperature",
     "temperaturePrompt": "Temperature càng cao, văn bản càng sáng tạo nhưng càng có khả năng trở nên rời rạc",
     "temperature0": "Cụ thể hơn",
