--- a/src/i18n/locales/zhtw.json
+++ b/src/i18n/locales/zhtw.json
@@ -170,7 +170,11 @@
     "topK": "topK",
     "topKPrompt": "topK 為 1 表示選定的 token 是模型詞彙中所有 token 中最可能的（也稱為貪婪解碼）",
     "topP": "topP",
-    "topPPrompt": "從最可能到最不可能的 token 被選出，直到它們的概率總和等於 topP 值。"
+    "topPPrompt": "從最可能到最不可能的 token 被選出，直到它們的概率總和等於 topP 值。",
+    "gpt-4o": "gpt-4o",
+    "gpt-4o-mini": "gpt-4o-mini",
+    "o1": "o1",
+    "o1-mini": "o1-mini"
   },
   "claudeAi": {
     "name": "Claude"
@@ -235,6 +239,8 @@
     "gpt-4-turbo": "gpt-4-turbo",
     "gpt-4o": "gpt-4o",
     "gpt-4o-mini": "gpt-4o-mini",
+    "o1": "o1",
+    "o1-mini": "o1-mini",
     "temperature": "Temperature",
     "temperaturePrompt": "Temperature 越高，生成的文字越有創造性，但也越可能無法理解",
     "temperature0": "更具確定性",
