--- a/src/i18n/locales/vi.json
+++ b/src/i18n/locales/vi.json
@@ -216,6 +216,8 @@
     "gpt-4-turbo": "gpt-4-turbo",
     "gpt-4o": "gpt-4o",
     "gpt-4o-mini": "gpt-4o-mini",
+    "o1": "o1",
+    "o1-mini": "o1-mini",
     "temperature": "Temperature",
     "temperaturePrompt": "Temperature càng cao, văn bản càng sáng tạo nhưng càng có khả năng trở nên rời rạc",
     "temperature0": "Cụ thể hơn",
