--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -235,6 +235,8 @@
     "gpt-4-turbo": "gpt-4-turbo",
     "gpt-4o": "gpt-4o",
     "gpt-4o-mini": "gpt-4o-mini",
+    "o1": "o1",
+    "o1-mini": "o1-mini",
     "temperature": "Température",
     "temperaturePrompt": "Une température plus élevée favorise la créativité du texte généré, mais le risque d'incohérence augmente également.",
     "temperature0": "Plus déterministe",
