--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -235,6 +235,8 @@
     "gpt-4-turbo": "gpt-4-turbo",
     "gpt-4o": "gpt-4o",
     "gpt-4o-mini": "gpt-4o-mini",
+    "o1": "o1",
+    "o1-mini": "o1-mini",
     "temperature": "温度",
     "temperaturePrompt": "温度が高いほど、テキストは創造的ですが、一貫性がない可能性が高いです。",
     "temperature0": "より決定論的な",
