--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -235,6 +235,8 @@
     "gpt-4-turbo": "gpt-4-turbo",
     "gpt-4o": "gpt-4o",
     "gpt-4o-mini": "gpt-4o-mini",
+    "o1": "o1",
+    "o1-mini": "o1-mini",
     "temperature": "온도",
     "temperaturePrompt": "온도가 높을수록 텍스트는 창의적이지만 일관성이 없을 가능성이 높습니다",
     "temperature0": "더 결정론적인",
